tests/typing/bad/testfile-arity-3.go
package main

func f() int { return 42 }
func g() {}
func main() { f(g()) }
